--- a/gb/18/10/16/n10786350.md
+++ b/gb/18/10/16/n10786350.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lblryx220/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lblryx220/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lblryx220/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lblryx220/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lblryx220/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lblryx220/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lblryx220/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>10秒满足感带来身体失衡？教你克制食物欲望</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/shutterstock_67823920-600x400.jpg" />
 <h6>为什么人会对食物产生强烈欲望？怎样克制对不良食物的欲望？(Shutterstock)
@@ -14,7 +14,7 @@
 <p>自然疗法医生埃琳娜．辛科夫（Elena Zinkov）指出，对我们来说，食物不只用来填饱肚子，内心情绪上的需求也常靠它满足。</p>
 <p>然而，“靠食物满足内心情绪上的需求，只会给你带来大约10秒的快感。长远来说，却是个破坏性的开始。”她说。</p>
 <p>当我们对某种食物极度渴望时，那种渴望程度似乎很难自控了。然而，这种欲望之所以会不断膨胀，我们也有责任。因为我们一次次地对欲望妥协，大脑和身体逐渐对这些食物产生依赖，最后一旦没了这些食物，就会难以忍受。</p>
-<p>血清素和多巴胺是<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6.md#1">控制</a>快感的大脑化学物质：当我们吃到好的食物时，血清素会激增；而多巴胺会固化这种行为，让我们下次想吃东西时，还会去找那个食物。</p>
+<p>血清素和多巴胺是<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6.md#1">控制</a>快感的大脑化学物质：当我们吃到好的食物时，血清素会激增；而多巴胺会固化这种行为，让我们下次想吃东西时，还会去找那个食物。</p>
 <p>这些化学信号一直影响着我们的祖先对食物的偏好和对膳食的满足感，但在高卡路里、高糖及添加剂堆叠的现代食品环境里，却起到了反作用。</p>
 <p>“对我们的祖先来说，食物并不容易取得。有时有丰盛的食物可享用，有时没什么东西可吃。”辛科夫说。 “现在，你开车到街的转角，就有7-11店，想吃什么有什么。在这种食物无虞的环境中，饥饿感的信号已经失敏了。”</p>
 <h3><span style="color: #800000;">过度满足欲望，多巴胺受体减少</span></h3>
@@ -22,19 +22,19 @@
 <p>当多巴胺处于正常水平时，能起到增强活力、提升能量和振奋心情等正面作用。充足的多巴胺令人精神专注、有动力和快乐感。多巴胺偏低，让人感觉情绪低落、抑郁，对什么事都兴趣缺缺。这意味着，若我们太依赖靠欲望来增加内心满足感，那所谓的幸福感就开始扭曲了。</p>
 <p>“这就是为什么我总强调‘欲望’背后有更深的原因。”辛科夫说。“我们有欲望的时候，通常是我们想要分散注意力的时候。当人处于压力、痛苦的经历中，或者无聊时，最容易产生欲望，然后就会开始想吃东西，因为没有其它事情可做。”</p>
 <p>当“欲望”成为刺激多巴胺分泌的途径，我们就养成了习惯，总要去吃最想吃的食物才能撑过一天。 当限制自己不去碰甜食的时候，会感到不开心、疲惫。其实这并非是身体对糖有需求，你只是在追逐糖所提供的短暂幸福感。</p>
-<h3><span style="color: #800000;">垃圾食物喂养<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E8%82%A0%E9%81%93%E8%8F%8C.md#1">肠道菌</a>，导致恶性循环</span></h3>
+<h3><span style="color: #800000;">垃圾食物喂养<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%82%A0%E9%81%93%E8%8F%8C.md#1">肠道菌</a>，导致恶性循环</span></h3>
 <p>对食物的欲望不仅是大脑的反应，很多是来自于肠道的反应。</p>
-<p>每个人体内都有一个巨大的有益菌群体。这群有益菌的重量约有3～5磅，栖息在我们的大肠中。这些<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E8%82%A0%E9%81%93%E8%8F%8C.md#1">肠道菌</a>的组成与我们的心理健康、情绪、消化状况、<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E8%8D%B7%E5%B0%94%E8%92%99.md#1">荷尔蒙</a>平衡、体重、基因表达有关，同时也和我们对食物的欲望有关。</p>
+<p>每个人体内都有一个巨大的有益菌群体。这群有益菌的重量约有3～5磅，栖息在我们的大肠中。这些<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%82%A0%E9%81%93%E8%8F%8C.md#1">肠道菌</a>的组成与我们的心理健康、情绪、消化状况、<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%8D%B7%E5%B0%94%E8%92%99.md#1">荷尔蒙</a>平衡、体重、基因表达有关，同时也和我们对食物的欲望有关。</p>
 <p>肠道菌由数百种不同的细菌菌株组成，我们吃的东西对菌株增殖有很大影响。有些菌株喜欢纤维质，有些菌株喜欢特定的脂肪。</p>
 <p>人们的肠道菌有普遍的相似性，但饮食造成了大部分的差异。例如，在日本人体内发现会消化海藻的肠道菌，而在吃高粱长大的非洲儿童体内发现了有助于消化谷物纤维的一种独特的肠道菌。</p>
 <p>肠道菌在肠道中起到重要作用，养得最好的菌株总是占上风。而我们的筷子伸向什么，决定了肠道里哪种细菌占主导作用。但是，我们所选择的菌株可能对身体并没有好处，比如，它可能增强我们对甜食的欲望。</p>
-<p>随着爱好垃圾食物的细菌在肠道中生长，它们会大量产生<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E8%8D%B7%E5%B0%94%E8%92%99.md#1">荷尔蒙</a>和神经递质，再度增加对食物的欲望，引发更多健康问题。</p>
+<p>随着爱好垃圾食物的细菌在肠道中生长，它们会大量产生<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%8D%B7%E5%B0%94%E8%92%99.md#1">荷尔蒙</a>和神经递质，再度增加对食物的欲望，引发更多健康问题。</p>
 <h3><span style="color: #800000;">荷尔蒙的影响</span></h3>
 <p>荷尔蒙不足也会引起对食物的强烈欲望。例如，甲状腺功能低下会降低细胞对葡萄糖的吸收率，减缓用餐后胰岛素对血液中葡萄糖的反应。当新陈代谢减缓到一定程度时，你会很想吃甜食，甜食才会让你的身体有平衡的感觉。</p>
 <p>当细胞没有获得足够的葡萄糖时，会给肾上腺带来压力。作为回应，肾上腺会释放出一种叫做皮质醇的压力荷尔蒙，增加细胞可利用的葡萄糖量。这意味着除非改善甲状腺功能，否则你的身体将处于高皮质醇分泌和高压力水平的恶性循环中，更进一步抑制甲状腺功能。</p>
 <p>这个循环会不断向甲状腺和肾上腺施压，引发一系列身体和情绪症状，包括对食物更强烈的欲望。</p>
 <h2><span style="color: #008000;">怎样克制对食物的欲望？</span></h2>
-<p>为了<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6.md#1">控制</a>我们对不良食物的欲望，辛科夫提出了如下建议：</p>
+<p>为了<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8E%A7%E5%88%B6.md#1">控制</a>我们对不良食物的欲望，辛科夫提出了如下建议：</p>
 <h3><span style="color: #800000;">1. 正确满足饥饿感</span></h3>
 <p>“对我来说，就是介入‘刺激’和你的‘反应’之间，”她说，“当人有了难以克制的欲望时，能够辨识它并进入那个区间是非常重要的。在这时，成长与改变就发生了。”</p>
 <p>首先要意识到你的饥饿感。如果你节食，不吃饭或只靠沙拉撑一整天，就会降低血糖、削弱你的意志，到了晚上，会更容易陷入对食物的欲望。</p>
@@ -50,53 +50,58 @@
 <p>“于是，我开始以更健康的方式来吃这种零食并满足我的欲望，”沙罗娃说。“时间一久，我的味觉喜好也改变了，原来的那种欲望也渐渐消失。”</p>
 <h3><span style="color: #800000;">4. 对自己有耐心</span></h3>
 <p>最后一点，要有耐心。如果你多年来一直在对食物的欲望中苦苦挣扎，不要指望在一周内就摆脱它们。可能需要一些时间才能解脱那种强烈的瘾好。</p>
-<p>辛科夫回忆起她自己与那些欲望的缠斗：她意识到自己对甜食的喜好导致长粉刺和烦躁，也发觉自己总在情绪低落时冲动地去吃一些淀粉类小吃。随着她对饮<ahref="https://github.com/lblryx220/djy/blob/master/gb/tag/%E9%A3%9F%E6%AC%B2.md#1">食欲</a>望有了更多的认识，有时她能够拒绝芝士蛋糕，有时她却拒绝不了。</p>
+<p>辛科夫回忆起她自己与那些欲望的缠斗：她意识到自己对甜食的喜好导致长粉刺和烦躁，也发觉自己总在情绪低落时冲动地去吃一些淀粉类小吃。随着她对饮<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%A3%9F%E6%AC%B2.md#1">食欲</a>望有了更多的认识，有时她能够拒绝芝士蛋糕，有时她却拒绝不了。</p>
 <p>“随后，我可以长达十年不吃芝士蛋糕。我做了很多努力，把恶化的身体机制慢慢扭转回来，并从内心重新改变自己。”她说，“那种终于可以自我控制的感觉，真的太让人激动了。”</p>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/lblryx220/djy/blob/master/gb/17/11/22/n9877111.md#1" target="_blank" rel="noopener noreferrer">糖是最受欢迎的成瘾药物？潜藏危机不可不防</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/lblryx220/djy/blob/master/gb/18/8/20/n10653641.md#1" target="_blank" rel="noopener noreferrer">无处不在的“棕榈油” 催胖还可能减寿</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/lblryx220/djy/blob/master/gb/18/6/5/n10455918.md#1" target="_blank" rel="noopener noreferrer">淀粉吃错影响记忆力！中医1招饮食法 2周改善记忆</a></span></h2>
-<p>责任编辑：李清风</p>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hoxgwd311/djy/blob/master/gb/17/11/22/n9877111.md#1" target="_blank" rel="noopener noreferrer">糖是最受欢迎的成瘾药物？潜藏危机不可不防</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/20/n10653641.md#1" target="_blank" rel="noopener noreferrer">无处不在的“棕榈油” 催胖还可能减寿</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/5/n10455918.md#1" target="_blank" rel="noopener noreferrer">淀粉吃错影响记忆力！中医1招饮食法 2周改善记忆</a></span></h2>
+<p>责任编辑：李清风◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/17/3/22/n8953921.md#1">“病”从哪里来？</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/17/3/31/n8986246.md#1">112岁老中医养生之道 养生贵在养心</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/17/8/8/n9509932.md#1">“脂肪”被冤50年 肥胖、心脏病并不怪它</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/17/12/26/n9993003.md#1">为何年过半百就衰老？古代中医论纵欲危害</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/18/6/8/n10465538.md#1">你的身体有毒吗？营养师教你从5个部位排毒（上）</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/18/8/13/n10635553.md#1">《魔鬼在统治着我们的世界》音频下载</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/25/n11975078.md#1">泡面成受欢迎囤粮 营养博士3招安心吃</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/23/n11967997.md#1">避免感染中共病毒 多吃补品有效吗</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/22/n11962581.md#1">大蒜堪称“天然抗生素” 泡醋喝增强免疫力</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/21/n11960519.md#1">豆腐和鸡蛋一起吃 减肥CP值高！2步自制鸡蛋豆腐</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/3/22/n8953921.md#1">“病”从哪里来？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/3/31/n8986246.md#1">112岁老中医养生之道 养生贵在养心</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/8/8/n9509932.md#1">“脂肪”被冤50年 肥胖、心脏病并不怪它</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/12/26/n9993003.md#1">为何年过半百就衰老？古代中医论纵欲危害</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/8/n10465538.md#1">你的身体有毒吗？营养师教你从5个部位排毒（上）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/13/n10635553.md#1">《魔鬼在统治着我们的世界》音频下载</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734997.md#1">小豆蔻是印度“香料女王” 有5大好处</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735672.md#1">黑蒜是超级食物 比大蒜抗氧化更强 有4大益处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/lblryx220/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10847366.md#1" target="_blank">林辉：燕大西语系四教授 文革三死一疯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/28/n11983353.md#1">台夫妻逾期未缴居家检疫罚款30万 两人已出境</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/29/n11984729.md#1">从中国进口130万缺陷口罩 荷兰停用并召回</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/28/n11983021.md#1">台男发病20多日才确诊 陈时中：此案较复杂</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/29/n11986130.md#1">台湾再增一名中共肺炎死亡患者 年仅40余岁</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/28/n11983549.md#1">新闻出现“封台倒数6天” 中天更正致歉</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/28/n11984334.md#1">中国真的零确诊？“黄安躲在台湾”打脸中共</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/29/n11985885.md#1">灵堂开放最后一天 辛龙难舍爱妻一度掩面痛哭</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/27/n11981967.md#1">跑完通告高烧38度 香港女星忧染疫入院筛检</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/26/n11978058.md#1">中共朝令夕改成常态 疫情下影院再度停业</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/29/n11984757.md#1">台魔术师曝隔离出关日 被陈时中“暖举”感动</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/24/n11968690.md#1">故宫离我们很近，但却离我们很远</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/17/n11948074.md#1">古人濒死体验：元神离体游历天国 预知时局</a></li>
-<li><a href="https://github.com/lblryx220/djy/blob/master/gb/20/3/14/n11940770.md#1">竹叶可驱蚊？老僧慈悲 一念结仙缘</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740582.md#1">【十字路口】习近平卧病不起？海外爆料透玄机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739779.md#1">美国房市是否放缓 现在是买房好时机吗？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lblryx220/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lblryx220/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/16/n10786350.htm">10秒满足感带来身体失衡？教你克制食物欲望</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/16/n10786350.htm">10秒满足感带来身体失衡？教你克制食物欲望</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lblryx220/djy/blob/master/gb/18/10/16/n10786350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lblryx220/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lblryx220/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lblryx220/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lblryx220/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lblryx220/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/18/10/16/n10786350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
